bootstrap/argocd-core.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
