bootstrap/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /healthz

spec:
  ingressClassName: nginx # <-- Explicitly bind to nginx ingress controller
  tls:
  - hosts:
    - argocd.parallelservicesllc.com
    secretName: argocd-tls
  rules:
  - host: argocd.parallelservicesllc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: argocd-server
            port:
              number: 80
